--- a/resources/src/main/res/values/themes.xml
+++ b/resources/src/main/res/values/themes.xml
@@ -6,12 +6,12 @@
         <item name="colorOnPrimary">@color/gray_0</item>
         <item name="colorSecondary">@color/red_6</item>
         <item name="colorOnSecondary">@color/gray_0</item>
-        <item name="colorTertiary">@color/gray_4</item>
+        <item name="colorTertiary">@color/gray_7</item>
         <item name="colorOnTertiary">@color/gray_0</item>
-        <item name="background">@color/gray_7</item>
-        <item name="backgroundColor">@color/black</item>
+        <item name="background">@color/gray_9</item>
+        <item name="backgroundColor">@color/gray_9</item>
         <item name="colorOnBackground">@color/gray_0</item>
-        <item name="colorSurface">@color/gray_9</item>
+        <item name="colorSurface">@color/gray_8</item>
         <item name="colorOnSurface">@color/gray_0</item>
 
         <!-- Material 3 Typography -->
@@ -112,5 +112,14 @@
     <style name="labelSmall" parent="@android:style/TextAppearance">
         <item name="android:textSize">11sp</item>
         <item name="lineHeight">16sp</item>
+    </style>
+
+    <style name="textAppearanceTabLayoutSelected" parent="@android:style/TextAppearance">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="textAppearanceTabLayoutUnSelected" parent="@android:style/TextAppearance">
+        <item name="android:textSize">12sp</item>
     </style>
 </resources>
