--- a/core/resources/src/main/res/values/colors.xml
+++ b/core/resources/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="red_6">#fa5252</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="lime_green">#4CAF50</color>
+    <color name="text_color_gray">#BDBCBC</color>
 </resources>
