--- a/feature/home/src/main/res/layout/fragment_home.xml
+++ b/feature/home/src/main/res/layout/fragment_home.xml
@@ -6,6 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="?attr/background"
+        android:paddingTop="40dp"
         android:gravity="center"
         android:orientation="vertical">
 
