--- a/feature/home/src/main/res/layout/item_data.xml
+++ b/feature/home/src/main/res/layout/item_data.xml
@@ -1,55 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="name"
             type="String" />
+
         <variable
             name="url"
             type="String" />
     </data>
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cv_container"
         android:layout_width="150dp"
         android:layout_height="200dp"
-        app:cardBackgroundColor="?attr/colorSurface"
-        app:cardElevation="2dp"
         android:layout_marginHorizontal="8dp"
         android:layout_marginVertical="8dp"
-        app:cardCornerRadius="8dp">
+        android:clickable="true"
+        android:focusable="true"
+        app:cardBackgroundColor="?attr/colorSurface"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="2dp">
 
         <FrameLayout
+            android:id="@+id/fl_collection"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
             <ImageView
                 android:id="@+id/iv_poster"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:contentDescription="@{name}"
                 android:background="?attr/colorSurface"
+                android:contentDescription="@{name}"
                 android:scaleType="centerCrop"
-                app:loadImage="@{url}"/>
+                app:loadImage="@{url}" />
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/background_item"/>
+                android:background="@drawable/background_item" />
+
             <TextView
                 android:id="@+id/tv_collection_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
                 android:layout_margin="4dp"
+                android:ellipsize="end"
                 android:gravity="center"
                 android:maxLines="2"
                 android:text="@{name}"
-                android:textColor="?attr/colorOnSurface"
                 android:textAppearance="?attr/textAppearanceLabelMedium"
-                android:ellipsize="end"
+                android:textColor="?attr/colorOnSurface"
                 android:textStyle="bold"
-                tools:text="Attack of titan"/>
+                tools:text="Attack of titan" />
         </FrameLayout>
     </androidx.cardview.widget.CardView>
 </layout>
