--- a/feature/detail/src/main/res/layout/fragment_tab_chapters.xml
+++ b/feature/detail/src/main/res/layout/fragment_tab_chapters.xml
@@ -8,6 +8,9 @@
         <variable
             name="hideProgress"
             type="Boolean" />
+        <variable
+            name="showNoData"
+            type="Boolean" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -29,6 +32,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="@{hideProgress ? View.GONE : View.VISIBLE}"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <TextView
+            android:id="@+id/tv_no_data"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="16dp"
+            android:visibility="@{showNoData ? View.VISIBLE : View.GONE}"
+            android:textColor="?attr/colorOnBackground"
+            android:textFontWeight="700"
+            android:textAppearance="?attr/textAppearanceTitleLarge"
+            android:text="@string/no_info_yet"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
