--- a/feature/detail/src/main/res/layout/fragment_tab_overview.xml
+++ b/feature/detail/src/main/res/layout/fragment_tab_overview.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-        <import type="android.view.View"/>
+
+        <import type="android.view.View" />
+
         <variable
             name="state"
             type="String" />
+
         <variable
             name="startDate"
             type="String" />
@@ -46,181 +49,189 @@
 
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="?attr/colorSurface">
 
-        <LinearLayout
-            android:id="@+id/ll_info"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:background="?attr/colorSurface"
-            android:orientation="vertical"
-            android:paddingHorizontal="16dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:layout_height="match_parent">
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/iv_icon_broadcast"
-                    tools:ignore="ContentDescription"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:src="@drawable/baseline_tv_24"
-                    app:tint="?attr/colorOnSurface" />
-
-                <TextView
-                    android:id="@+id/tv_broadcast_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginStart="4dp"
-                    android:text="@string/emitted_state"
-                    android:textFontWeight="700"
-                    android:textAppearance="?textAppearanceBodyMedium"
-                    android:textColor="?attr/colorOnSurface"/>
-
-                <TextView
-                    android:id="@+id/tv_broadcast_state"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="4dp"
-                    android:layout_gravity="center"
-                    android:textFontWeight="300"
-                    android:text="@{state}"
-                    android:textAppearance="?textAppearanceBodyMedium"
-                    android:textColor="?attr/colorOnSurface"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/iv_calendar_start"
-                    app:tint="?attr/colorOnSurface"
-                    tools:ignore="ContentDescription"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:visibility="@{showStartDate ? View.VISIBLE : View.GONE}"
-                    android:src="@drawable/baseline_calendar_today_24" />
-
-                <TextView
-                    android:id="@+id/tv_emit_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="4dp"
-                    android:text="@string/emitted"
-                    android:textFontWeight="700"
-                    android:visibility="@{showStartDate ? View.VISIBLE : View.GONE}"
-                    android:textAppearance="?textAppearanceBodyMedium"
-                    android:textColor="?attr/colorOnSurface" />
-
-                <TextView
-                    android:id="@+id/tv_emit"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="4dp"
-                    android:text="@{startDate}"
-                    android:layout_marginEnd="16dp"
-                    android:textFontWeight="300"
-                    android:visibility="@{showStartDate ? View.VISIBLE : View.GONE}"
-                    android:textAppearance="?textAppearanceBodyMedium"
-                    android:textColor="?attr/colorOnSurface" />
-
-                <ImageView
-                    android:id="@+id/iv_calendar_end"
-                    tools:ignore="ContentDescription"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    app:tint="?attr/colorOnSurface"
-                    android:visibility="@{showEndDate ? View.VISIBLE : View.GONE}"
-                    android:src="@drawable/baseline_calendar_today_24" />
-
-                <TextView
-                    android:id="@+id/tv_end_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="4dp"
-                    android:text="@string/finished"
-                    android:visibility="@{showEndDate ? View.VISIBLE : View.GONE}"
-                    android:textAppearance="?textAppearanceBodyMedium"
-                    android:textColor="?attr/colorOnSurface"
-                    android:textFontWeight="700" />
-
-                <TextView
-                    android:id="@+id/tv_end_date"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="4dp"
-                    android:text="@{endDate}"
-                    android:textFontWeight="300"
-                    android:visibility="@{showEndDate ? View.VISIBLE : View.GONE}"
-                    android:textAppearance="?textAppearanceBodyMedium"
-                    android:textColor="?attr/colorOnSurface" />
-            </LinearLayout>
-            <TextView
-                android:id="@+id/tv_genres"
+                android:id="@+id/ll_info"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="@{genres}"
-                android:textFontWeight="300"
-                android:visibility="@{showGenres ? View.VISIBLE : View.GONE}"
-                android:textAppearance="?textAppearanceBodyMedium"
-                android:textColor="@color/gray_1"/>
-        </LinearLayout>
+                android:background="?attr/colorSurface"
+                android:orientation="vertical"
+                android:paddingHorizontal="16dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/tv_synopsys_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginHorizontal="16dp"
-            android:text="@string/synopsis"
-            android:textFontWeight="800"
-            android:textAlignment="textStart"
-            android:textColor="?attr/colorOnSurface"
-            android:textAppearance="?attr/textAppearanceTitleMedium"
-            app:layout_constraintTop_toBottomOf="@id/ll_info"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/synopsisText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="@{synopsis}"
-            android:lineHeight="25dp"
-            android:visibility="@{showEmptySynopsis ? View.GONE : View.VISIBLE}"
-            android:textAlignment="textStart"
-            android:layout_marginHorizontal="16dp"
-            android:textAppearance="?attr/textAppearanceBodyMedium"
-            android:textColor="?attr/colorOnSurface"
-            app:layout_constraintTop_toBottomOf="@id/tv_synopsys_title"/>
+                    <ImageView
+                        android:id="@+id/iv_icon_broadcast"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:src="@drawable/baseline_tv_24"
+                        app:tint="?attr/colorOnSurface"
+                        tools:ignore="ContentDescription" />
 
-        <TextView
-            android:id="@+id/tv_no_synopsis"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="@string/no_synopsis"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:lineHeight="2dp"
-            android:layout_marginHorizontal="16dp"
-            android:visibility="@{showEmptySynopsis ? View.VISIBLE : View.GONE}"
-            android:textAlignment="textStart"
-            android:textAppearance="?attr/textAppearanceHeadlineLarge"
-            android:textColor="?attr/colorOnSurface"
-            app:layout_constraintTop_toBottomOf="@id/tv_synopsys_title"/>
+                    <TextView
+                        android:id="@+id/tv_broadcast_title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginStart="4dp"
+                        android:text="@string/emitted_state"
+                        android:textAppearance="?textAppearanceBodyMedium"
+                        android:textColor="?attr/colorOnSurface"
+                        android:textFontWeight="700" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+                    <TextView
+                        android:id="@+id/tv_broadcast_state"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginStart="4dp"
+                        android:text="@{state}"
+                        android:textAppearance="?textAppearanceBodyMedium"
+                        android:textColor="?attr/colorOnSurface"
+                        android:textFontWeight="300" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/iv_calendar_start"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:src="@drawable/baseline_calendar_today_24"
+                        android:visibility="@{showStartDate ? View.VISIBLE : View.GONE}"
+                        app:tint="?attr/colorOnSurface"
+                        tools:ignore="ContentDescription" />
+
+                    <TextView
+                        android:id="@+id/tv_emit_title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="4dp"
+                        android:text="@string/emitted"
+                        android:textAppearance="?textAppearanceBodyMedium"
+                        android:textColor="?attr/colorOnSurface"
+                        android:textFontWeight="700"
+                        android:visibility="@{showStartDate ? View.VISIBLE : View.GONE}" />
+
+                    <TextView
+                        android:id="@+id/tv_emit"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="4dp"
+                        android:layout_marginEnd="16dp"
+                        android:text="@{startDate}"
+                        android:textAppearance="?textAppearanceBodyMedium"
+                        android:textColor="?attr/colorOnSurface"
+                        android:textFontWeight="300"
+                        android:visibility="@{showStartDate ? View.VISIBLE : View.GONE}" />
+
+                    <ImageView
+                        android:id="@+id/iv_calendar_end"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:src="@drawable/baseline_calendar_today_24"
+                        android:visibility="@{showEndDate ? View.VISIBLE : View.GONE}"
+                        app:tint="?attr/colorOnSurface"
+                        tools:ignore="ContentDescription" />
+
+                    <TextView
+                        android:id="@+id/tv_end_title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="4dp"
+                        android:text="@string/finished"
+                        android:textAppearance="?textAppearanceBodyMedium"
+                        android:textColor="?attr/colorOnSurface"
+                        android:textFontWeight="700"
+                        android:visibility="@{showEndDate ? View.VISIBLE : View.GONE}" />
+
+                    <TextView
+                        android:id="@+id/tv_end_date"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="4dp"
+                        android:text="@{endDate}"
+                        android:textAppearance="?textAppearanceBodyMedium"
+                        android:textColor="?attr/colorOnSurface"
+                        android:textFontWeight="300"
+                        android:visibility="@{showEndDate ? View.VISIBLE : View.GONE}" />
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/tv_genres"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:text="@{genres}"
+                    android:textAppearance="?textAppearanceBodyMedium"
+                    android:textColor="@color/gray_1"
+                    android:textFontWeight="300"
+                    android:visibility="@{showGenres ? View.VISIBLE : View.GONE}" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/tv_synopsys_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginTop="20dp"
+                android:text="@string/synopsis"
+                android:textAlignment="textStart"
+                android:textAppearance="?attr/textAppearanceTitleMedium"
+                android:textColor="?attr/colorOnSurface"
+                android:textFontWeight="800"
+                app:layout_constraintTop_toBottomOf="@id/ll_info" />
+
+            <TextView
+                android:id="@+id/synopsisText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginTop="8dp"
+                android:lineHeight="25dp"
+                android:text="@{synopsis}"
+                android:textAlignment="textStart"
+                android:textAppearance="?attr/textAppearanceBodyMedium"
+                android:textColor="?attr/colorOnSurface"
+                android:visibility="@{showEmptySynopsis ? View.GONE : View.VISIBLE}"
+                app:layout_constraintTop_toBottomOf="@id/tv_synopsys_title" />
+
+            <TextView
+                android:id="@+id/tv_no_synopsis"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginTop="8dp"
+                android:gravity="center"
+                android:lineHeight="2dp"
+                android:text="@string/no_synopsis"
+                android:textAlignment="textStart"
+                android:textAppearance="?attr/textAppearanceHeadlineLarge"
+                android:textColor="?attr/colorOnSurface"
+                android:visibility="@{showEmptySynopsis ? View.VISIBLE : View.GONE}"
+                app:layout_constraintTop_toBottomOf="@id/tv_synopsys_title" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.core.widget.NestedScrollView>
+
 
 </layout>
